# app-gerenciador-financeiro

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 20260112_1559_c6d8e0a58a94_init_schema.py  20260115_1336_040d05c0064f_add_unique_constraint_for_accounts_name_.py
docs/: ARCHITECTURE.md  ARCH_REVIEW.md  DBEAVER_SETUP.md  ERROR_CATALOG.md  TECHNICAL_DOCUMENTATION.md
docs/adr/: 0001-transaction-boundary-unit-of-work.md  0002-domain-layer-value-objects-and-rules.md  0003-problemdetail-error-contract.md  0004-money-as-decimal-and-string-contract.md  0005-architecture-guardrails-tests.md  README.md
src/app/: main.py
src/app/api/: deps.py  openapi.py
tests/: conftest.py  test_accounts.py  test_architecture.py  test_budgets_reports.py  test_categories.py  test_domain_rules_budgets.py  test_domain_rules_reports.py  test_domain_rules_transactions.py  test_seeds.py  test_transactions.py  test_transfers.py  test_validation_gaps.py
web-dashboard-nicegui/: .env.example  README.md  pyproject.toml  run_local.py
web-dashboard-nicegui/src/dashboard_nicegui/: __init__.py  __main__.py  main.py
web-dashboard-nicegui/src/dashboard_nicegui/api_client/: __init__.py  client.py  dtos.py
web-dashboard-nicegui/src/dashboard_nicegui/core/: __init__.py  errors.py  logging.py  settings.py
web-dashboard-nicegui/src/dashboard_nicegui/features/: __init__.py
web-dashboard-nicegui/src/dashboard_nicegui/features/accounts/: __init__.py  page.py
web-dashboard-nicegui/src/dashboard_nicegui/features/budgets/: __init__.py  page.py
web-dashboard-nicegui/src/dashboard_nicegui/features/categories/: __init__.py  page.py
web-dashboard-nicegui/src/dashboard_nicegui/features/dashboard/: __init__.py  page.py
web-dashboard-nicegui/src/dashboard_nicegui/features/transactions/: __init__.py  page.py
web-dashboard-nicegui/src/dashboard_nicegui/shared/: __init__.py  components.py  formatters.py
(+59 files in other folders)
